--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My App</title>
 
-    <link href="js/app.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
